# solver

./: .gitignore  Makefile  compilerun.sh  compilerun_CPU.sh  compilerun_GPU.sh  compilerun_MG.sh  compilerun_MG_3D.sh  log  run.sh
buildDir/: Makefile_CPU  Makefile_GPU  Makefile_GPU_MG  Makefile_GPU_MG_3D  run_CPU.sh  run_GPU.sh  run_GPU_MG.sh  run_GPU_MG_3D.sh
inc/: function.h  header.h  macro.h
logDir/: log_CPU  log_CPU_MG  log_CPU_MG_3D  log_GPU  log_GPU_MG  log_GPU_MG_3D
pyscript/: draw.ipynb  fem_fdm_possion.ipynb
src/: common_func.cpp  iterative.cpp  main.cpp  possion.cpp
src_CPU/: common_func.cpp  iterative.cpp  main.cpp  possion.cpp
src_GPU/: common_func.cpp  iterative.cpp  main.cpp  possion.cpp
src_MG/: main.cpp  main_3D.cpp  main_GPU.cpp  main_GPU_3D.cpp
src_cpp_learning/: CMakeLists.txt  CudaArray.cuh  CudaPossion.cu  run.sh
